# clef

./: .env.example  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  check.sh  dev.sh  justfile  lint.sh  remove_cached_images.sh  remove_db.sh  test.sh  todo.org
audio/: Cargo.toml
audio/src/: lib.rs  metadata.rs  player.rs  track_info.rs
audio/src/player/: media_controls.rs  track_info.rs
crates/audio/: Cargo.toml
crates/audio/src/: blue_green_player.rs  lib.rs  player.rs
crates/audio/src/player/: device_config.rs  output.rs  preloader.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  models.rs  queries.rs
crates/shared/: Cargo.toml
crates/shared/src/: window_handle_hack.rs
crates/ui/: Cargo.toml
crates/ui/src/: app.rs  icon.rs  lib.rs  setup.rs  test_util.rs
crates/ui/src/app/: audio_subscription.rs  crawler.rs  effect.rs  hoverable.rs  icons.rs  music_cache.rs  old_unfold.rs  resizer.rs  rgba.rs
db/: Cargo.toml
db/migrations/2022-11-12-070103_create_songs/: up.sql
db/src/: lib.rs  queries.rs  schema.rs
migrations/2022-11-11-235156_create_songs/: up.sql
migrations/2022-11-12-065854_create_albums/: up.sql
migrations/2022-11-12-070103_create_songs/: up.sql
shared/: Cargo.toml
shared/src/: lib.rs  queue.rs  window_handle_hack.rs
src/: app.rs  audio.rs  channels.rs  config.rs  db.rs  lib.rs  logging.rs  main.rs  platform.rs  queue.rs  test_util.rs  ui.rs  window_handle_hack.rs
src/app/: audio_subscription.rs  config.rs  crawler.rs  custom_style.rs  effect.rs  hoverable.rs  icons.rs  media_controls.rs  modal.rs  music_cache.rs  old_unfold.rs  resizer.rs  rgba.rs
src/audio/: output.rs  player.rs  resampler.rs  track_info.rs
src/audio/player/: media_controls.rs
src/db/: models.rs  queries.rs  schema.rs
src/ui/: bgra.rs  config.rs  crawler.rs  data.rs  effect.rs  hover_zone.rs  hoverable.rs  icons.rs  music_cache.rs  resizer.rs  rgb.rs  rgba.rs  startup.rs
src/ui/data/: album_id.rs  song_id.rs  tag_key.rs
