[package]
name = "clef"
version = "0.1.0"
edition = "2021"
authors = [ "Dan Knutson <dan.knutson@gmail.com>" ]

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
camino = "1.1.1"
directories = "4.0.1"
flume = { version = "0.10.14" }
log = { version = "0.4", features = ["release_max_level_info"] }
pretty_env_logger = "0.4"

clef_shared = { path = "./crates/shared" }
clef_db = { path = "./crates/db" }
clef_audio = { path = "./crates/audio" }
clef_ui = { path = "./crates/ui" }

# compile all external dependencies in release mode
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/db",
    "crates/audio",
    "crates/ui"
]
