[package]
name = "clef_audio"
version = "0.1.0"
edition = "2021"
authors = [ "Dan Knutson <dan.knutson@gmail.com>" ]

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
camino = "1.1.1"
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
flume = { version = "0.10.14" }
log = { version = "0.4", features = ["release_max_level_info"] }
parking_lot = "0.12.1"
r2d2 = "0.8.10"
symphonia = { version = "0.5.2", features = ["mp3"] }
thiserror = "1.0.37"
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }

clef_shared = { path = "../shared" }
clef_db = { path = "../db" }

[dependencies.souvlaki]
version = "0.6"
default-features = false
features = ["use_zbus"]

[dependencies.diesel]
version = "2.0.2"
features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"]

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.5.0"
libpulse-simple-binding = "2.5.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.13.3"
rb = "0.3.2"
arrayvec = "0.7.1"
rubato = "0.12.0"

[target.'cfg(target_os = "windows")'.dependencies]
once_cell = "1.17.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging"
]

[dev-dependencies]
mockall = "0.11.3"

