[package]
name = "clef_audio"
version = "0.1.0"
edition = "2021"
authors = [ "Dan Knutson <dan.knutson@gmail.com>" ]

[dependencies]
anyhow = { version = "1.0.66", features = ["backtrace"] }
camino = "1.1.1"
flume = { version = "0.10.14" }
log = { version = "0.4", features = ["release_max_level_info"] }
r2d2 = "0.8.10"
souvlaki = { version = "0.6", default-features = false, features = ["use_zbus"] }
symphonia = { version = "0.5.2", features = ["mp3"] }
thiserror = "1.0.37"

clef_shared = { path = "../shared" }
clef_db = { path = "../db" }

[target.'cfg(target_os = "linux")'.dependencies]
libpulse-binding = "2.5.0"
libpulse-simple-binding = "2.5.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.13.3"
rb = "0.3.2"
arrayvec = "0.7.1"
rubato = "0.12.0"

[dev-dependencies]
mockall = "0.11.3"

