[package]
name = "clef_ui"
version = "0.0.1"
edition = "2021"
authors = [ "Dan Knutson <dan.knutson@gmail.com>" ]

[dependencies]
anyhow.workspace = true
camino.workspace = true
flume.workspace = true
log.workspace = true
thiserror.workspace = true

clef_shared = { path = "../shared" }
clef_db = { path = "../db" }
clef_audio = { path = "../audio" }

iced_style = "0.8.0"

[dependencies.iced]
version = "0.9"
features = ["svg", "image", "debug"]

[dependencies.iced_native]
version = "0.10.1"

[dependencies.image_rs]
package = "image"
version = "0.24"
